--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -1,6 +1,32 @@
 <templateSet group="PHP">
-  <template name="ife" value="if ($VAR_VALUE$) &#10;{&#10;    $END$&#10;}" description="if (){....}" toReformat="true" toShortenFQNames="true">
-    <variable name="VAR_VALUE" expression="" defaultValue="" alwaysStopAt="true" />
-    <context />
+  <template name="fore" value="foreach ($ITERABLE$ as $value) &#10;{&#10;    $END$&#10;}" description="foreach(iterable_expr as $value) {...}" toReformat="true" toShortenFQNames="true">
+    <variable name="ITERABLE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
+  <template name="pubf" value="public function $NAME$($PARAMETERS$)&#10;{&#10;    $END$&#10;}" description="public function" toReformat="false" toShortenFQNames="true">
+    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PARAMETERS" expression="phpVar" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
+  <template name="ife" value="if ($ITERABLE$)&#10;{&#10;    $END$&#10;}" description="if (iterable_expr) {...}" toReformat="false" toShortenFQNames="true">
+    <variable name="ITERABLE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
+  <template name="fori" value="for ($i = 0; $i&lt;=x; $i++)&#10;{&#10;    $END$&#10;}" description="for() {...}" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
+  <template name="swe" value="switch ($ITERABLE$)&#10;{&#10;    case &quot;$END$&quot; :&#10;        &#10;    break;&#10;    case &quot;$END$&quot; :&#10;        &#10;    break;&#10;}" description="switch (iterable_expr) {...}" toReformat="false" toShortenFQNames="true">
+    <variable name="ITERABLE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP" value="true" />
+    </context>
   </template>
 </templateSet>
